// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-inRwDn eSBFEl"
  size="medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader renders with different colours 1`] = `
Array [
  <div
    className="sc-inRwDn eSBFEl"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn iaePIB"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn jvqWxN"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn iUxqXF"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;

exports[`Loader renders with sizes 1`] = `
Array [
  <div
    className="sc-inRwDn ifkuic"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn jKJaKY"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn fUUHGY"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn eSBFEl"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-inRwDn bVnrHp"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;
